<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pv_normal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_weight="3"
        android:background="#3C514C4C">

        <TextView
            android:id="@+id/streak_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="8dp"
            android:text="Best Streak: 0"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/current_streak_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/streak_text_view"
            android:layout_alignParentRight="true"
            android:paddingRight="8dp"
            android:text="Current Streak: 0"
            android:textSize="28sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center_horizontal"
                android:text="@string/enter"
                android:textAlignment="center"
                android:textSize="48sp" />

            <EditText
                android:id="@+id/number_normal"
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:textAlignment="center" />

            <Button
                android:id="@+id/normal_quiz_launcher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:onClick="goButton"
                android:text="@string/go" />

        </LinearLayout>

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/normal_quiz_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/option_1_tv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:background="#3C514C4C"
            android:gravity="center"
            android:text="@string/option1"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/option_2_tv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:background="#3C514C4C"
            android:gravity="center"
            android:text="@string/option2"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/option_3_tv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:background="#3C514C4C"
            android:gravity="center"
            android:text="@string/option3"
            android:textAlignment="center" />

    </LinearLayout>

</LinearLayout>